--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 Flask==0.10.1
+Flask-Login==0.2.11
 Flask-SQLAlchemy==2.0
+Flask-WTF==0.11
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
 SQLAlchemy==1.0.0
 Werkzeug==0.10.4
+wheel==0.24.0
+WTForms==2.0.2
