--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,23 @@
-alembic==0.7.6
-decorator==3.4.2
-Flask==0.10.1
-Flask-Admin==1.2.0
-Flask-Login==0.2.11
-Flask-Script==2.0.5
-Flask-SQLAlchemy==2.0
-Flask-WTF==0.11
-itsdangerous==0.24
-Jinja2==2.7.3
-Mako==1.0.1
-MarkupSafe==0.23
-pbr==1.3.0
-six==1.9.0
-SQLAlchemy==1.0.0
-sqlalchemy-migrate==0.9.7
-sqlparse==0.1.15
-Tempita==0.5.2
-Werkzeug==0.10.4
-wheel==0.24.0
-WTForms==2.0.2
+alembic==1.0.5
+Click==7.0
+decorator==4.3.0
+Flask==1.0.2
+Flask-Admin==1.5.2
+Flask-Login==0.4.1
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+itsdangerous==1.1.0
+Jinja2==2.10
+Mako==1.0.7
+MarkupSafe==1.1.0
+pbr==5.1.1
+python-dateutil==2.7.5
+python-editor==1.0.3
+six==1.12.0
+SQLAlchemy==1.3.0b1
+sqlalchemy-migrate==0.11.0
+sqlparse==0.2.4
+Tempita==0.5.3.dev0
+Werkzeug==0.14.1
+WTForms==2.2.1
